fix: remove overflow-x hidden from body for improved layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,6 @@
 
 body, html {
 	scroll-behavior: smooth;
-	overflow-x: hidden;
 }
 
 .font-sl {
